--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: 20% 60% 20%;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
+    margin: 15px 0;
 }
 
 .containerHeader2{
