--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,3 +5,43 @@
 .containerHero {
     
 }
+
+.containerTitle{
+    text-align: center;
+}
+
+.containerGrid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 7px 0;
+}
+
+.itemGrid{
+    height: 120px;
+    min-width: 100px;
+    border: solid 1px rgb(199, 199, 199);
+    margin: 7px 7px;
+}
+
+@media (min-width: 768px) {
+
+    .containerTitle {
+        font-size: 1.4rem;
+    }
+
+    .containerGrid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 7px 0;
+    }
+
+    .itemGrid{
+        height: 130px;
+        width: 100px;
+        border: solid 1px grey;
+        margin: 14px;
+    }
+   
+}
